--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
 	"name": "american-imperial-faction",
+	"scripts": {
+		"build": "gulp",
+		"deploy": "gulp deploy && rm -rf ./.publish",
+		"start": "gulp dev"
+	},
 	"devDependencies": {
+		"gh-pages": "^2.2.0",
 		"gulp": "^4.0.2",
 		"gulp-clean-css": "^4.2.0",
 		"gulp-gh-pages": "^0.5.4",
 		"gulp-htmlmin": "^5.0.1",
 		"gulp-imagemin": "^6.1.0",
+		"gulp-uglify": "^3.0.2",
 		"jpegtran-bin": "^4.0.0"
 	}
 }
